--- a/html/style.css
+++ b/html/style.css
@@ -1,30 +1,120 @@
+/* 썸네일을 포함하고 있는 div */
+.thumbnail_grid{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+/* fr(fraction) 사용 가능한 공간의 일부분
+비율로 공간을 나눈다고 생각하면 된다. */
 
-/* 상단바 */
-#high_bar { 
+/* 썸네일 이미지 */
+.thumbnail{
+    width:100%;
+}
+
+#stat_bar{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+
+    margin-top: 5px;
+    margin-bottom : 5px;
+}
+
+.stat{
+    text-align: center;
+}
+
+/* 프로필 사진의 컨테이너 */
+#profile_pic{
+    width: 15vw;
+    height: 15vh;
+}
+
+/* 하이라이트 사진의 컨테이너 */
+.highlight_pic{
+    width: 10vw;
+    height: 10vh;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* 원형으로 만드려는 이미지 */
+.circle_pic{
+    border: 1px solid white;
+    border-radius: 50%;
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* 하이라이트 영역 grid 사용하여 정렬하기 */
+#highlight_area{
+    display:grid;
+    grid-template-columns: 12vw 12vw 1fr;
+}
+
+.highlight{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#profile{
+    display:grid;
+    grid-template-columns: 1fr 3.5fr;
+}
+
+#profile_info{
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+
+    height: 15vw;
+}
+
+#id{
+    font-size: 6vw;
+    font-weight: 100;
+}
+
+button{
+    height: 80%;
+    width: 95%;
+
+    font-size: 3vw;
+    background-color: white;
+    border: solid gray 1px;
+    border-radius: 3px;
+}
+
+#top{
     display:grid;
     grid-template-columns: 4fr 7fr 4fr;
-    
-
     height: 10vw;
     min-height: 10vw;
     margin-bottom: 3vw;
-
     border-bottom: solid gray 0.1px;
-
-
 }
-#high_bar img {
+
+#top img{
     margin-left: auto;
     margin-right: auto;
-    /* object-fit: contain; */
 
+    width: 100%;
     height: 100%;
+    /* object-fit: contain; */
 }
-#high_bar input {
+
+#top input{
     height: 35%;
     width: 95%;
 
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
 
     text-align:center;
     background-color: rgb(250,250,250);
@@ -34,41 +124,18 @@
 
     font-size: 3vw;
     font-weight: 100;
-}
-#high_bar div {
-    text-align: center;
-    padding: 3vw;
-}
-#high_bar i{
-    font-size: 4vw;
-    margin-top : 1vw;
-}
-/* 프로필 영역 */
-#profile { 
-    display: grid;
-    grid-template-columns: 1fr 3.5fr;
-}
-#profile_pic {
-    width: 15vw;
-    height: 15vh;
-    
-}
-#profile_info {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
 
-    height: 15vw;
 }
-#id {
-    font-size: 6vw;
-    font-weight: 100;
+#top div{
+    text-align: center;
+    padding-top: 3vw;
 }
-/* 소개글 */
-.intro_letter {
-    border: solid;
+#top i{
+    font-size: 4vw;
+    margin-top:1vw;
 }
-/* 아이콘 */
-#main_icon {
+
+#sub_icons{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 
@@ -77,65 +144,11 @@
 
     height:8vw;
 }
+
 .selected{
     border-bottom: 3px gray solid;
 }
-/* 하이라이트 */
-.high_light {
-    display: grid;
-    grid-template-columns: 12vw 12vw 1fr;
-    
-}
-.high_light_sub {
-    text-align: center;
 
-}
-.highlight_pic {
-    width: 10vw;
-    height: 10vh;
-    margin-left: auto;
-    margin-right: auto;
-}
-/* 상태 표시줄 */
-#status_Bar {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-
-    border-top: 1px solid gray;
-    border-bottom: 1px solid gray;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-.stat {
-    text-align: center;
-}
-/* 게시물 썸네일 */
-#thumb_nail_grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-.thumb_nail { 
-    width: 100%;
-}
-
-/* 공통 부분 */
-body {
+body{
     font-size: 3vw;
-}
-/* 사진 둥글게 만들기 */
-.circle_pic {
-    border: 1px solid white;
-    border-radius: 50%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-/* 버튼 */
-button {
-    height: 80%;
-    width: 95%;
-    font-size: 10px;
-    background-color: white;
-    border: 1px solid gray;
-    border-radius: 3px;
 }
